# hatch-calvar-sample

./: .gitignore  .pre-commit-config.yaml  CALVER_MIGRATION_GUIDE.md  CALVER_QUICK_START.md  CHANGELOG.md  LICENSE.txt  Makefile  PYPROJECT_TOML_MIGRATION.md  README.md  create_sample_hatch_project_with_calver_and_release_automation_98fc61f5.plan.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  build-verify.yml  docs-check.yml  license-check.yml  lint.yml  release.yml  security.yml  test.yml
scripts/: calc_version.py
src/hatch_calvar_sample/: __about__.py  __init__.py  cli.py
tests/: __init__.py  test_version_calc.py  test_version_cli.py
