[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-calvar-sample"
dynamic = ["version"]
description = 'Sample project demonstrating CalVer (YYYY.MM.DD.MICRO) with hatch'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "QAToolist", email = "qatoolist@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.scripts]
calver-check = "hatch_calvar_sample.cli:main"

[project.urls]
Documentation = "https://github.com/QAToolist/hatch-calvar-sample#readme"
Issues = "https://github.com/QAToolist/hatch-calvar-sample/issues"
Source = "https://github.com/QAToolist/hatch-calvar-sample"

[tool.hatch.version]
path = "src/hatch_calvar_sample/VERSION"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hatch_calvar_sample tests}"

[tool.coverage.run]
source_pkgs = ["hatch_calvar_sample", "tests"]
branch = true
parallel = true
omit = [
  "src/hatch_calvar_sample/__about__.py",
]

[tool.coverage.paths]
hatch_calvar_sample = ["src/hatch_calvar_sample", "*/hatch-calvar-sample/src/hatch_calvar_sample"]
tests = ["tests", "*/hatch-calvar-sample/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
