[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-calvar-sample"
dynamic = ["version"]
description = 'Sample project demonstrating CalVer (YYYY.MM.DD.MICRO) with hatch'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "QAToolist", email = "qatoolist@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit[sarif]>=1.7.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    # Enterprise tools
    "radon>=6.0.0",
    "xenon>=0.9.0",
    "pip-licenses>=4.0.0",
    "interrogate>=1.5.0",
    "pydocstyle>=6.3.0",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
]
lint = [
    "pre-commit>=3.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
security = [
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
    "bandit[sarif]>=1.7.0",
]
docs = [
    "interrogate>=1.5.0",
    "pydocstyle>=6.3.0",
]
quality = [
    "radon>=6.0.0",
    "xenon>=0.9.0",
]

[project.scripts]
calver-check = "hatch_calvar_sample.cli:main"

[project.urls]
Documentation = "https://github.com/QAToolist/hatch-calvar-sample#readme"
Issues = "https://github.com/QAToolist/hatch-calvar-sample/issues"
Source = "https://github.com/QAToolist/hatch-calvar-sample"

[tool.hatch.version]
path = "src/hatch_calvar_sample/VERSION"

[tool.hatch.envs.default]
dependencies = [
  "pre-commit",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hatch_calvar_sample tests}"

[tool.hatch.envs.lint]
dependencies = [
  "pre-commit>=3.0.0",
  "black>=24.1.0",
  "isort>=5.13.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "bandit>=1.7.0",
]
[tool.hatch.envs.lint.scripts]
all = "pre-commit run --all-files"
install = "pre-commit install"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["E501", "B011"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/",
]

[[tool.mypy.overrides]]
module = [
    "hatch_calvar_sample.__about__",
    "hatch_calvar_sample.cli",
]
disable_error_code = ["no-redef"]

[tool.bandit]
exclude_dirs = ["tests", "*.egg-info", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used test

[tool.coverage.run]
source_pkgs = ["hatch_calvar_sample", "tests"]
branch = true
parallel = true
omit = [
  "src/hatch_calvar_sample/__about__.py",
]

[tool.coverage.paths]
hatch_calvar_sample = ["src/hatch_calvar_sample", "*/hatch-calvar-sample/src/hatch_calvar_sample"]
tests = ["tests", "*/hatch-calvar-sample/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

# Interrogate - docstring coverage
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
fail-under = 50
exclude = ["tests", "scripts", "setup.py"]
verbose = 1

# Pydocstyle - docstring style
[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D100", "D104", "D105", "D107"]
match = "(?!test_).*\\.py"
match-dir = "^(?!tests|scripts).*"

# Radon - code complexity
[tool.radon]
exclude = "tests/*,scripts/*"
cc_min = "C"  # Report functions with complexity >= C

# Xenon - complexity thresholds
[tool.xenon]
max-absolute = "C"
max-modules = "B"
max-average = "A"
